Change URL to  HttpRequest